reconstruct ML script

--- a/nbs/01CONSTANTS.ipynb
+++ b/nbs/01CONSTANTS.ipynb
@@ -84,7 +84,8 @@
     "WATER_DF_PATH_STR = 'path'\n",
     "WATER_DF_WATER_PERC_STR = 'water_perc'\n",
     "WATER_DF_WATER_PERC_LABEL_STR = 'water_label_perc'\n",
-    "random_state = 42\n"
+    "RANDOM_STATE= 42\n",
+    "TEST_SIZE = 25"
    ]
   },
   {
