--- a/nbs/06train_ml.ipynb
+++ b/nbs/06train_ml.ipynb
@@ -40,9 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_15672\\3491729059.py:6: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "#|export\n",
     "#|hide\n",
@@ -61,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,18 +89,32 @@
     "               path_imgs_str : str , #path to S2 images to be used for train\n",
     "               target_col : str , #name of the target attribute in the dataframe. Will be used for model training\n",
     "               cols_to_drop : list = [None] , # list of columns to be dropped from the dataframe. These columns won't be used to train the model. \n",
-    "               test_size : float=0.25 , #size of test data\n",
+    "               test_size : float=CONST.TEST_SIZE , #size of test data\n",
+    "               random_state : int = CONST.RANDOM_STATE , #random state , deafult value is set in Cconst_vals module\n",
     "               ):\n",
     "    \n",
     "    self.target_col = target_col\n",
     "    self.cols_to_drop = cols_to_drop\n",
     "    self.test_size = test_size\n",
+    "    self.random_state = random_state\n",
     "    \n",
     "    self.path_labels = utils_func.load_list_paths(path = path_labels_str , filter_file = True)\n",
     "    self.path_imgs = utils_func.load_list_paths(path = path_imgs_str , filter_file= True)\n",
     "\n",
+    "\n",
+    "    #collect pixels into dataframe \n",
+    "    self.df_res = self._collect_pixels_to_dataframe_()\n",
+    "\n",
+    "    # split into train and test data for ML model\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "  def _collect_pixels_to_dataframe_(self):\n",
     "    dfs_pixels = []\n",
-    "    for label_path in self.path_labels:\n",
+    "\n",
+    "    #TODO remove the 3!\n",
+    "    for label_path in self.path_labels[:3]:\n",
     "      id_path = label_path.split(CONST.SPLIT_TILES_NAMES_STR1)[-1].split(CONST.SPLIT_TILES_NAMES_STR2)[1]\n",
     "      \n",
     "      #find the matching S2 image\n",
@@ -97,9 +126,7 @@
     "        cols = rasterio.open(s2_img_path[0]).descriptions + rasterio.open(label_path).descriptions\n",
     "        cols = [str(x) for x in cols]\n",
     "        label_img = rasterio.open(label_path).read()\n",
-    "        \n",
     "\n",
-    "        # Stack the imags \n",
     "        stacked_img = np.concatenate((s2_img, label_img), axis=0)\n",
     "        \n",
     "        df_pixels = pd.DataFrame(stacked_img.reshape([stacked_img.shape[0],-1]).T)\n",
@@ -108,24 +135,32 @@
     "\n",
     "      else:\n",
     "        continue\n",
+    "      \n",
+    "      \n",
+    "      df_res = pd.concat(dfs_pixels)\n",
     "\n",
-    "    self.df_res = pd.concat(dfs_pixels)\n",
-    "\n",
-    "\n",
+    "      return df_res\n",
+    "    \n",
     "  \n",
-    "  def _prepare_dataframe_for_train_(self):\n",
+    "  # def _prepare_dataframe_for_train_(self):\n",
+    "    \n",
     "\n",
-    "    if self.cols_to_drop[0] != None :\n",
-    "      self.df_res.drop(self.cols_to_drop,axis=1,inplace=True)\n",
+    "  #   if self.cols_to_drop[0] != None :\n",
+    "  #     self.cols_to_drop=self.df_res.drop(self.cols_to_drop,axis=1)\n",
     "\n",
-    "    x = self.df_res.drop(self.target_col,axis=1,inplace=True)\n",
-    "    y = self.df_res[self.target_col].values\n",
+    "    # #drop null values\n",
+    "    # self.df_res.dropna(axis=0,inplace=True)\n",
     "\n",
-    "    x_train, x_test, y_train, y_test = train_test_split(x, y, \n",
-    "                                                        test_size = self.test_size, \n",
-    "                                                        random_state = CONST.RANDOM_STATE)\n",
+    "    # self.x = self.df_res.drop(self.target_col,axis=1)\n",
+    "    # self.y = self.df_res[self.target_col].values\n",
+    "    # print('I have x and y')\n",
+    "    \n",
     "\n",
+    "    # x_train, x_test, y_train, y_test = train_test_split(x, y, \n",
+    "    #                                                     test_size = self.test_size, \n",
+    "    #                                                     random_state = self.random_state)\n",
     "\n",
+    "    # return x_train, x_test, y_train, y_test\n",
     "    \n",
     "\n",
     "\n",
@@ -134,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +207,6 @@
        "      <th>B11</th>\n",
        "      <th>B12</th>\n",
        "      <th>None</th>\n",
-       "      <th>qc</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -191,8 +225,7 @@
        "      <td>35</td>\n",
        "      <td>2394</td>\n",
        "      <td>1158</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -209,8 +242,7 @@
        "      <td>35</td>\n",
        "      <td>2394</td>\n",
        "      <td>1158</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -227,8 +259,7 @@
        "      <td>33</td>\n",
        "      <td>2563</td>\n",
        "      <td>1387</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -245,8 +276,7 @@
        "      <td>33</td>\n",
        "      <td>2563</td>\n",
        "      <td>1387</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -263,8 +293,7 @@
        "      <td>33</td>\n",
        "      <td>2493</td>\n",
        "      <td>1375</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -282,134 +311,128 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>262139</th>\n",
-       "      <td>1178</td>\n",
-       "      <td>1180</td>\n",
-       "      <td>1213</td>\n",
-       "      <td>1120</td>\n",
-       "      <td>1399</td>\n",
-       "      <td>2637</td>\n",
-       "      <td>2967</td>\n",
-       "      <td>2829</td>\n",
-       "      <td>3350</td>\n",
-       "      <td>1006</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2224</td>\n",
-       "      <td>1241</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1681</td>\n",
+       "      <td>1392</td>\n",
+       "      <td>1390</td>\n",
+       "      <td>1082</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>2821</td>\n",
+       "      <td>3442</td>\n",
+       "      <td>3195</td>\n",
+       "      <td>3831</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2374</td>\n",
+       "      <td>1172</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>262140</th>\n",
-       "      <td>1178</td>\n",
-       "      <td>1121</td>\n",
-       "      <td>1148</td>\n",
-       "      <td>976</td>\n",
-       "      <td>1427</td>\n",
-       "      <td>2444</td>\n",
-       "      <td>3041</td>\n",
-       "      <td>2860</td>\n",
-       "      <td>3306</td>\n",
-       "      <td>1006</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2264</td>\n",
-       "      <td>1325</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1681</td>\n",
+       "      <td>1390</td>\n",
+       "      <td>1379</td>\n",
+       "      <td>1099</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>2821</td>\n",
+       "      <td>3442</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>3831</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2374</td>\n",
+       "      <td>1172</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>262141</th>\n",
-       "      <td>1178</td>\n",
-       "      <td>1097</td>\n",
-       "      <td>1148</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1427</td>\n",
-       "      <td>2444</td>\n",
-       "      <td>3041</td>\n",
-       "      <td>2705</td>\n",
-       "      <td>3306</td>\n",
-       "      <td>1006</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2264</td>\n",
-       "      <td>1325</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1681</td>\n",
+       "      <td>1373</td>\n",
+       "      <td>1372</td>\n",
+       "      <td>1086</td>\n",
+       "      <td>1439</td>\n",
+       "      <td>2680</td>\n",
+       "      <td>3159</td>\n",
+       "      <td>2991</td>\n",
+       "      <td>3537</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2318</td>\n",
+       "      <td>1195</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>262142</th>\n",
-       "      <td>1178</td>\n",
-       "      <td>1097</td>\n",
-       "      <td>1148</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1427</td>\n",
-       "      <td>2444</td>\n",
-       "      <td>3041</td>\n",
-       "      <td>2705</td>\n",
-       "      <td>3306</td>\n",
-       "      <td>1006</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2264</td>\n",
-       "      <td>1325</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1681</td>\n",
+       "      <td>1363</td>\n",
+       "      <td>1335</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>1439</td>\n",
+       "      <td>2680</td>\n",
+       "      <td>3159</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>3537</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2318</td>\n",
+       "      <td>1195</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>262143</th>\n",
-       "      <td>1178</td>\n",
-       "      <td>1123</td>\n",
-       "      <td>1174</td>\n",
-       "      <td>1014</td>\n",
-       "      <td>1455</td>\n",
-       "      <td>2516</td>\n",
-       "      <td>3071</td>\n",
-       "      <td>2682</td>\n",
-       "      <td>3302</td>\n",
-       "      <td>1006</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2307</td>\n",
-       "      <td>1322</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1681</td>\n",
+       "      <td>1349</td>\n",
+       "      <td>1308</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>1402</td>\n",
+       "      <td>2681</td>\n",
+       "      <td>3218</td>\n",
+       "      <td>2896</td>\n",
+       "      <td>3594</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2254</td>\n",
+       "      <td>1108</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>103809024 rows × 15 columns</p>\n",
+       "<p>262144 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          B1    B2    B3    B4    B5    B6    B7    B8   B8A    B9  B10   B11  \\\n",
-       "0       1518  1233  1186   875  1256  2642  3335  3061  3561   342   35  2394   \n",
-       "1       1518  1239  1194   897  1256  2642  3335  2887  3561   342   35  2394   \n",
-       "2       1517  1251  1253   933  1381  2806  3312  3115  3806   360   33  2563   \n",
-       "3       1517  1255  1247   936  1381  2806  3312  3181  3806   360   33  2563   \n",
-       "4       1517  1228  1197   897  1288  2498  3048  2898  3362   360   33  2493   \n",
-       "...      ...   ...   ...   ...   ...   ...   ...   ...   ...   ...  ...   ...   \n",
-       "262139  1178  1180  1213  1120  1399  2637  2967  2829  3350  1006   12  2224   \n",
-       "262140  1178  1121  1148   976  1427  2444  3041  2860  3306  1006   12  2264   \n",
-       "262141  1178  1097  1148  1000  1427  2444  3041  2705  3306  1006   12  2264   \n",
-       "262142  1178  1097  1148  1000  1427  2444  3041  2705  3306  1006   12  2264   \n",
-       "262143  1178  1123  1174  1014  1455  2516  3071  2682  3302  1006   12  2307   \n",
+       "          B1    B2    B3    B4    B5    B6    B7    B8   B8A   B9  B10   B11  \\\n",
+       "0       1518  1233  1186   875  1256  2642  3335  3061  3561  342   35  2394   \n",
+       "1       1518  1239  1194   897  1256  2642  3335  2887  3561  342   35  2394   \n",
+       "2       1517  1251  1253   933  1381  2806  3312  3115  3806  360   33  2563   \n",
+       "3       1517  1255  1247   936  1381  2806  3312  3181  3806  360   33  2563   \n",
+       "4       1517  1228  1197   897  1288  2498  3048  2898  3362  360   33  2493   \n",
+       "...      ...   ...   ...   ...   ...   ...   ...   ...   ...  ...  ...   ...   \n",
+       "262139  1681  1392  1390  1082  1468  2821  3442  3195  3831  481  133  2374   \n",
+       "262140  1681  1390  1379  1099  1468  2821  3442  3044  3831  481  133  2374   \n",
+       "262141  1681  1373  1372  1086  1439  2680  3159  2991  3537  481  133  2318   \n",
+       "262142  1681  1363  1335  1060  1439  2680  3159  2917  3537  481  133  2318   \n",
+       "262143  1681  1349  1308  1013  1402  2681  3218  2896  3594  481  133  2254   \n",
        "\n",
-       "         B12  None  qc  \n",
-       "0       1158   0.0 NaN  \n",
-       "1       1158   0.0 NaN  \n",
-       "2       1387   0.0 NaN  \n",
-       "3       1387   0.0 NaN  \n",
-       "4       1375   0.0 NaN  \n",
-       "...      ...   ...  ..  \n",
-       "262139  1241   0.0 NaN  \n",
-       "262140  1325   0.0 NaN  \n",
-       "262141  1325   0.0 NaN  \n",
-       "262142  1325   0.0 NaN  \n",
-       "262143  1322   0.0 NaN  \n",
+       "         B12  None  \n",
+       "0       1158     0  \n",
+       "1       1158     0  \n",
+       "2       1387     0  \n",
+       "3       1387     0  \n",
+       "4       1375     0  \n",
+       "...      ...   ...  \n",
+       "262139  1172     0  \n",
+       "262140  1172     0  \n",
+       "262141  1195     0  \n",
+       "262142  1195     0  \n",
+       "262143  1108     0  \n",
        "\n",
-       "[103809024 rows x 15 columns]"
+       "[262144 rows x 14 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +441,10 @@
     "instance = classification_pixels(path_imgs_str=r\"D:\\git\\flood_exercise\\S2\",\n",
     "                                 path_labels_str=r\"D:\\git\\flood_exercise\\S2_HANDLABELED\",\n",
     "                                 target_col = 'None',\n",
-    "                                 cols_to_drop= ['qc']\n",
+    "                                 cols_to_drop= ['qc'],\n",
+    "                                 test_size= 0.25,\n",
+    "                                 random_state = 42,\n",
+    "                    \n",
     "                                 )\n",
     "instance.df_res"
    ]
@@ -429,7 +455,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "instance.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "instance.df_res.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance.df_res.drop('None',axis=1,inplace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance.df_res['None'].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance.df_res"
    ]
   },
   {
