fixed train test data

--- a/nbs/06train_ml.ipynb
+++ b/nbs/06train_ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_15672\\3491729059.py:6: DeprecationWarning: \n",
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_11076\\3491729059.py:6: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +106,7 @@
     "    self.df_res = self._collect_pixels_to_dataframe_()\n",
     "\n",
     "    # split into train and test data for ML model\n",
+    "    self.x_train, self.x_test, self.y_train, self.y_test=self._prepare_dataframe_for_train_()\n",
     "\n",
     "\n",
     "\n",
@@ -142,25 +143,30 @@
     "      return df_res\n",
     "    \n",
     "  \n",
-    "  # def _prepare_dataframe_for_train_(self):\n",
+    "  def _prepare_dataframe_for_train_(self):\n",
     "    \n",
-    "\n",
-    "  #   if self.cols_to_drop[0] != None :\n",
-    "  #     self.cols_to_drop=self.df_res.drop(self.cols_to_drop,axis=1)\n",
-    "\n",
-    "    # #drop null values\n",
-    "    # self.df_res.dropna(axis=0,inplace=True)\n",
-    "\n",
-    "    # self.x = self.df_res.drop(self.target_col,axis=1)\n",
-    "    # self.y = self.df_res[self.target_col].values\n",
-    "    # print('I have x and y')\n",
+    "    #drop columns that are not relevant for the training (defined by user)\n",
     "    \n",
+    "    if self.cols_to_drop[0] != None:\n",
     "\n",
-    "    # x_train, x_test, y_train, y_test = train_test_split(x, y, \n",
-    "    #                                                     test_size = self.test_size, \n",
-    "    #                                                     random_state = self.random_state)\n",
+    "      try:\n",
+    "        self.df_res=self.df_res.drop(self.cols_to_drop,axis=1)\n",
     "\n",
-    "    # return x_train, x_test, y_train, y_test\n",
+    "      except Exception as e:\n",
+    "        print(f'Could not drop the columns {self.cols_to_drop} with error:{e}')\n",
+    "        \n",
+    "\n",
+    "    #drop null values\n",
+    "    self.df_res.dropna(axis=0,inplace=True)\n",
+    "\n",
+    "    x = self.df_res.drop(self.target_col,axis=1)\n",
+    "    y = self.df_res[self.target_col].values\n",
+    "    \n",
+    "    x_train, x_test, y_train, y_test = train_test_split(x, y, \n",
+    "                                                        test_size = self.test_size, \n",
+    "                                                        random_state = self.random_state)\n",
+    "\n",
+    "    return x_train, x_test, y_train, y_test\n",
     "    \n",
     "\n",
     "\n",
@@ -169,9 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not drop the columns ['qc'] with error:\"['qc'] not found in axis\"\n",
+      "I have x and y\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -432,7 +446,7 @@
        "[262144 rows x 14 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,6 +461,268 @@
     "                    \n",
     "                                 )\n",
     "instance.df_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B1</th>\n",
+       "      <th>B2</th>\n",
+       "      <th>B3</th>\n",
+       "      <th>B4</th>\n",
+       "      <th>B5</th>\n",
+       "      <th>B6</th>\n",
+       "      <th>B7</th>\n",
+       "      <th>B8</th>\n",
+       "      <th>B8A</th>\n",
+       "      <th>B9</th>\n",
+       "      <th>B10</th>\n",
+       "      <th>B11</th>\n",
+       "      <th>B12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1518</td>\n",
+       "      <td>1233</td>\n",
+       "      <td>1186</td>\n",
+       "      <td>875</td>\n",
+       "      <td>1256</td>\n",
+       "      <td>2642</td>\n",
+       "      <td>3335</td>\n",
+       "      <td>3061</td>\n",
+       "      <td>3561</td>\n",
+       "      <td>342</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2394</td>\n",
+       "      <td>1158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1518</td>\n",
+       "      <td>1239</td>\n",
+       "      <td>1194</td>\n",
+       "      <td>897</td>\n",
+       "      <td>1256</td>\n",
+       "      <td>2642</td>\n",
+       "      <td>3335</td>\n",
+       "      <td>2887</td>\n",
+       "      <td>3561</td>\n",
+       "      <td>342</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2394</td>\n",
+       "      <td>1158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1517</td>\n",
+       "      <td>1251</td>\n",
+       "      <td>1253</td>\n",
+       "      <td>933</td>\n",
+       "      <td>1381</td>\n",
+       "      <td>2806</td>\n",
+       "      <td>3312</td>\n",
+       "      <td>3115</td>\n",
+       "      <td>3806</td>\n",
+       "      <td>360</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2563</td>\n",
+       "      <td>1387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1517</td>\n",
+       "      <td>1255</td>\n",
+       "      <td>1247</td>\n",
+       "      <td>936</td>\n",
+       "      <td>1381</td>\n",
+       "      <td>2806</td>\n",
+       "      <td>3312</td>\n",
+       "      <td>3181</td>\n",
+       "      <td>3806</td>\n",
+       "      <td>360</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2563</td>\n",
+       "      <td>1387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1517</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>897</td>\n",
+       "      <td>1288</td>\n",
+       "      <td>2498</td>\n",
+       "      <td>3048</td>\n",
+       "      <td>2898</td>\n",
+       "      <td>3362</td>\n",
+       "      <td>360</td>\n",
+       "      <td>33</td>\n",
+       "      <td>2493</td>\n",
+       "      <td>1375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262139</th>\n",
+       "      <td>1681</td>\n",
+       "      <td>1392</td>\n",
+       "      <td>1390</td>\n",
+       "      <td>1082</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>2821</td>\n",
+       "      <td>3442</td>\n",
+       "      <td>3195</td>\n",
+       "      <td>3831</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2374</td>\n",
+       "      <td>1172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262140</th>\n",
+       "      <td>1681</td>\n",
+       "      <td>1390</td>\n",
+       "      <td>1379</td>\n",
+       "      <td>1099</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>2821</td>\n",
+       "      <td>3442</td>\n",
+       "      <td>3044</td>\n",
+       "      <td>3831</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2374</td>\n",
+       "      <td>1172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262141</th>\n",
+       "      <td>1681</td>\n",
+       "      <td>1373</td>\n",
+       "      <td>1372</td>\n",
+       "      <td>1086</td>\n",
+       "      <td>1439</td>\n",
+       "      <td>2680</td>\n",
+       "      <td>3159</td>\n",
+       "      <td>2991</td>\n",
+       "      <td>3537</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2318</td>\n",
+       "      <td>1195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262142</th>\n",
+       "      <td>1681</td>\n",
+       "      <td>1363</td>\n",
+       "      <td>1335</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>1439</td>\n",
+       "      <td>2680</td>\n",
+       "      <td>3159</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>3537</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2318</td>\n",
+       "      <td>1195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262143</th>\n",
+       "      <td>1681</td>\n",
+       "      <td>1349</td>\n",
+       "      <td>1308</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>1402</td>\n",
+       "      <td>2681</td>\n",
+       "      <td>3218</td>\n",
+       "      <td>2896</td>\n",
+       "      <td>3594</td>\n",
+       "      <td>481</td>\n",
+       "      <td>133</td>\n",
+       "      <td>2254</td>\n",
+       "      <td>1108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>262144 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          B1    B2    B3    B4    B5    B6    B7    B8   B8A   B9  B10   B11  \\\n",
+       "0       1518  1233  1186   875  1256  2642  3335  3061  3561  342   35  2394   \n",
+       "1       1518  1239  1194   897  1256  2642  3335  2887  3561  342   35  2394   \n",
+       "2       1517  1251  1253   933  1381  2806  3312  3115  3806  360   33  2563   \n",
+       "3       1517  1255  1247   936  1381  2806  3312  3181  3806  360   33  2563   \n",
+       "4       1517  1228  1197   897  1288  2498  3048  2898  3362  360   33  2493   \n",
+       "...      ...   ...   ...   ...   ...   ...   ...   ...   ...  ...  ...   ...   \n",
+       "262139  1681  1392  1390  1082  1468  2821  3442  3195  3831  481  133  2374   \n",
+       "262140  1681  1390  1379  1099  1468  2821  3442  3044  3831  481  133  2374   \n",
+       "262141  1681  1373  1372  1086  1439  2680  3159  2991  3537  481  133  2318   \n",
+       "262142  1681  1363  1335  1060  1439  2680  3159  2917  3537  481  133  2318   \n",
+       "262143  1681  1349  1308  1013  1402  2681  3218  2896  3594  481  133  2254   \n",
+       "\n",
+       "         B12  \n",
+       "0       1158  \n",
+       "1       1158  \n",
+       "2       1387  \n",
+       "3       1387  \n",
+       "4       1375  \n",
+       "...      ...  \n",
+       "262139  1172  \n",
+       "262140  1172  \n",
+       "262141  1195  \n",
+       "262142  1195  \n",
+       "262143  1108  \n",
+       "\n",
+       "[262144 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "instance.x"
    ]
   },
   {
