--- a/nbs/01CONSTANTS.ipynb
+++ b/nbs/01CONSTANTS.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,8 +84,22 @@
     "WATER_DF_PATH_STR = 'path'\n",
     "WATER_DF_WATER_PERC_STR = 'water_perc'\n",
     "WATER_DF_WATER_PERC_LABEL_STR = 'water_label_perc'\n",
+    "\n",
     "RANDOM_STATE= 42\n",
-    "TEST_SIZE = 25"
+    "TEST_SIZE = 25\n",
+    "N_JOBS = -1 \n",
+    "VERBOSE = 1\n",
+    "N_ITERATIONS_XGB = 100\n",
+    "CV_XGB = 5\n",
+    "\n",
+    "RANDOM_GRID_XGB = {\n",
+    "    \"n_estimators\": [100,300,500],\n",
+    "    \"eta\" : [0.3 , 0.5, 0.8 ,1],\n",
+    "    \"gamma\":[0.01, 0.1, 1, 5],\n",
+    "    \"max_deth\" : [4, 6, 10],\n",
+    "    \"alpha\":[0,0.01, 0.1, 0.5],\n",
+    "    \"learning_rate\":[0.01, 0.1, 0.5, 1],\n",
+    "    }"
    ]
   },
   {
