added classification evaluation function

--- a/nbs/01CONSTANTS.ipynb
+++ b/nbs/01CONSTANTS.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,16 +90,25 @@
     "N_JOBS = -1 \n",
     "VERBOSE = 1\n",
     "N_ITERATIONS_XGB = 100\n",
-    "CV_XGB = 5\n",
+    "CV_XGB = 3\n",
     "\n",
     "RANDOM_GRID_XGB = {\n",
     "    \"n_estimators\": [100,300,500],\n",
     "    \"eta\" : [0.3 , 0.5, 0.8 ,1],\n",
-    "    \"gamma\":[0.01, 0.1, 1, 5],\n",
-    "    \"max_deth\" : [4, 6, 10],\n",
-    "    \"alpha\":[0,0.01, 0.1, 0.5],\n",
-    "    \"learning_rate\":[0.01, 0.1, 0.5, 1],\n",
-    "    }"
+    "    \"gamma\":[0.01, 0.1, 1],\n",
+    "    \"max_deth\" : [4, 6],\n",
+    "    \"alpha\":[0,0.1, 0.5],\n",
+    "    \"learning_rate\":[0.01, 0.1, 0.5],\n",
+    "    }\n",
+    "\n",
+    "# RANDOM_GRID_XGB = {\n",
+    "#     \"n_estimators\": [100,300,500],\n",
+    "#     \"eta\" : [0.3 , 0.5, 0.8 ,1],\n",
+    "#     \"gamma\":[0.01, 0.1, 1, 5],\n",
+    "#     \"max_deth\" : [4, 6, 10],\n",
+    "#     \"alpha\":[0,0.01, 0.1, 0.5],\n",
+    "#     \"learning_rate\":[0.01, 0.1, 0.5, 1],\n",
+    "#     }"
    ]
   },
   {
