--- a/nbs/01CONSTANTS.ipynb
+++ b/nbs/01CONSTANTS.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "    \"n_estimators\": [100,300,500],\n",
     "    \"eta\" : [0.3 , 0.5, 0.8 ,1],\n",
     "    \"gamma\":[0.01, 0.1, 1],\n",
-    "    \"max_deth\" : [4, 6],\n",
+    "    \"max_depth\" : [4, 6],\n",
     "    \"alpha\":[0,0.1, 0.5],\n",
     "    \"learning_rate\":[0.01, 0.1, 0.5],\n",
     "    }\n",
